# FastAPI-Template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: linters_tests_deploy.yml
app/: config.py  data_generate.py  database.py  dependencies.py  main.py
app/appointments/: dao.py  models.py  rb.py  router.py  schemas.py  services.py
app/dao/: base.py
app/exceptions/: exceptions_methods.py
app/migrations/: env.py
app/migrations/versions/: 16d5804309f2_init.py  7a7cbcf0f1c8_add_cascade.py  889fa333af67_init.py
tests/: config_test.py  conftest.py  dao_test.py  router_test.py
