[project]
name = "FastAPI-Template"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "BoriskaGlebov", email = "boristheblade.glebov@yandex.ru" },
]
dependencies = ["fastapi>=0.116.0", "uvicorn>=0.35.0", "pydantic>=2.11.7", "sqlalchemy>=2.0.41", "alembic>=1.16.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[dependency-groups]
lint = [
    "pre-commit>=4.2.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "flake8>=7.3.0",
    "flake8-docstrings>=1.7.0",
    "autoflake>=2.3.1",
    "darglint>=1.8.1",
    "mypy>=1.16.1",
    "types-atomicwrites>=1.4.5.1",
    "types-tabulate>=0.9.0.20241207",
    "types-freezegun>=1.1.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
]


[tool.black]
line-length = 88
target-version = ["py312", ]
exclude = "venv"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
force_sort_within_sections = true
combine_as_imports = true
include_trailing_comma = true
known_first_party = ["app"]
skip = ["venv", ]


[tool.autoflake]
check = false
in-place = true
recursive = true
exclude = [
    ".venv/*",
    "app/migrations/*"
]
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.darglint]
docstring_style = "google"
strictness = "medium"         # уровни: "short", "medium", "long" (чем длиннее, тем строже)
ignore = ["DAR101"]          # можно список кодов ошибок, которые игнорировать

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E266", "E501", "D104", "D100", "D106", "D105", "W503", "D401", ]
exclude = [
    ".venv/*",
    ".venv/*",
    "__pycache__/*",
    "build/*",
    "dist/*",
    "app/migrations/*",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
exclude = '(venv|test|tests|build|dist|\.venv|app/main\.py|app/migrations/env\.py)'
follow_imports = "silent"
warn_redundant_casts = true
ignore_missing_imports = true
warn_unused_ignores = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict = true # строгий режим

[tool.pdm]
distribution = false

